Bug 93540 - [BISECTED, HSW] Rendering issue in Heaven (and other benchmarks)
Summary: [BISECTED, HSW] Rendering issue in Heaven (and other benchmarks)
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Ian Romanick
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
: 93599 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-12-30 13:24 UTC by Martin Peres
Modified: 2016-02-09 01:50 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Photo that shows the rendering issue on Heaven (notice the black lines on the right screen and the wrong colors next to the street light) (197.36 KB, text/plain)
2015-12-30 13:24 UTC, Martin Peres
Details
Photo that shows the rendering issue on Heaven (notice the black lines on the right screen and the wrong colors next to the street light) (197.36 KB, image/jpeg)
2015-12-30 13:26 UTC, Martin Peres
Details
Information about the hw and libraries used (19.40 KB, text/plain)
2015-12-30 13:47 UTC, Martin Peres
Details

Description Martin Peres 2015-12-30 13:24:48 UTC
Created attachment 120736 [details]
Photo that shows the rendering issue on Heaven (notice the black lines on the right screen and the wrong colors next to the street light)

The commit "i965: Hook up L3 partitioning state atom." (http://cgit.freedesktop.org/mesa/mesa/commit/?id=228d5a3f75086e92aaa01619a55d6c8ac7841e0e) introduced a rendering regression in at least heaven and lightsmark (where I first spotted it).

The rendering issue also bleeds to other contexts as can be see on the attached screenshot which confirms the bisection.
Comment 1 Martin Peres 2015-12-30 13:26:51 UTC
Created attachment 120737 [details]
Photo that shows the rendering issue on Heaven (notice the black lines on the right screen and the wrong colors next to the street light)

The attachment type got mis-detected. Fix it.
Comment 2 Martin Peres 2015-12-30 13:47:55 UTC
Created attachment 120739 [details]
Information about the hw and libraries used

Sorry for not having the version the libgl and other mesa libraries, I installed the binaries myself and not through ezbench, so it did not get added to the shaderDB. I have an alias in my .bashrc to do the install and add the libs in shaderdb but I forgot to use it.
Comment 3 Martin Peres 2016-01-13 10:13:22 UTC
This patch from curro[1] fixes the rendering issue.

[1] https://bugs.freedesktop.org/attachment.cgi?id=120998
Comment 4 Mark Janes 2016-01-15 09:39:42 UTC
*** Bug 93599 has been marked as a duplicate of this bug. ***
Comment 5 Francisco Jerez 2016-02-09 01:50:30 UTC
Fix pushed as 0aa4f99f562a05880a779707cbcd46be459863bf.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.